<resources>
    <string name="app_name" translatable="false">OTTAA Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configuration</string>
    <string name="pref_open_settings">Opening settings.</string>
    <string name="spl_name">OTTAA Project</string>
    <string name="action_reiniciar">Reset</string>
    <string name="action_borrar">Delete</string>
    <string name="action_parar">Mute</string>
    <string name="action_share">Share</string>
    <string name="pref_login">Sign up by clicking on the Sign In button. Thank you for choosing
        OTTAA Project.</string>
    <string name="pref_login_tu_sub">Your subscription ended </string>
    <string name="pref_login_tu_sub_2">To renew your license please contact us.</string>
    <string name="pref_login_gracias">Thank you for choosing OTTAA Project.</string>
    <string name="pref_login_contact">Contact Us</string>
    <string name="pref_login_autentificando">Entering ...</string>
    <string name="pref_login_semana">Your trial period has just begun. Thank you for choosing OTTAA Project.</string>
    <string name="pref_login_lo_sentimos">Sorry, for the first use you need to be connected to internet. Sorry for this inconvenience.</string>
    <string name="pref_OK">OK</string>
    <string name="pref_cargando_DB">Loading Database ...</string>
    <string name="pref_cargando_presentacion">Loading personal presentation</string>
    <string name="pref_header_presentacion">Personal presentation</string>
    <string name="pref_text_presentacion">Uses the personal presentation</string>
    <string name="pref_title_presentacion">Presentation text</string>
    <string name="pref_example_presentacion">Hello I am Juan, I have communication problems and I use this system, I need you to wait for me.</string>
    <string name="pref_header_tts">Text-to-speech Engine</string>
    <string name="pref_text_tts">Enable custom TTS</string>
    <string name="pref_summary_tts">It enables a customized voice.</string>
    <string name="pref_option1_tts">Speech rate</string>
    <string name="pref_option2_tts">Voice pitch</string>
    <string name="pref_header_subtitulo">Subtitle</string>
    <string name="pref_header_cerrar_sesion">Sign out</string>
    <string name="pref_header_cerrar_sesion2">Sign out to change user</string>
    <string name="my_own_title">Rate OTTAA Project</string>
    <string name="my_own_rate">Yes</string>
    <string name="my_own_thanks">No, thanks</string>
    <string name="my_own_cancel">Later</string>
    <string name="youAreNotUpdatedMessage">A new version of OTTAA is available. Please update to the lastest version to get all the new cool features.</string>
    <string name="youAreNotUpdatedMessage1">Now</string>
    <string name="update">Update</string>
    <string name="pref_text_subtitulo">Customized subtitle</string>
    <string name="pref_summary_subtitulo">Show customized captions.</string>
    <string name="pref_subtitulo_tamanio">Size</string>
    <string name="pref_subtitulo_mayuscula">Uppercase</string>
    <string name="pref_subtitulo_mayuscula_summary">It allows uppercase subtitles.</string>
    <string name="pref_idioma">Language</string>
    <string name="pref_agenda">Customized calendar</string>
    <string name="pref_text_agenda">Selected calendar</string>
    <string name="pref_summary_agenda">Choose the calendar with your daily routine.</string>
    <string name="pref_ubicacion">Location</string>
    <string name="pref_summary_ubicacion">Improves prediction by geo tagging.</string>
    <string name="pref_barrido">Screen scanning</string>
    <string name="pref_summary_barrido">It allows to use the application by scanning <screen class=""></screen></string>
    <string name="pref_experimental" translatable="false">OTTAA Labs</string>
    <string name="pref_summary_experimental">Use artificial intelligence to generate a richer sentence. You need a stable internet connection.</string>
    <string name="pref_editar">Edit Pictograms</string>
    <string name="pref_summary_editar">Allow to disable the function Edit Pictograms.</string>
    <string name="pref_summary_chatgpt">Allow disabling the ChatGPT option.</string>
    <string name="pref_summary_double_click">This function available  the double click function to select a pictogram .</string>
    <string name="pref_open_editar">Opening pictogram editor.</string>
    <string name="pref_cual_es">What\'s the picto</string>
    <string name="pref_error_editar">Sorry, these pictograms can not be edited.</string>
    <string name="pref_text_editar">Pictogram text</string>
    <string name="pref_opcion_editar">Related pictograms</string>
    <string name="pref_select_camara">Camera</string>
    <string name="pref_select_galeria">Galery</string>
    <string name="pref_select_pictos">Download from ARASAAC</string>
    <string name="pref_important_alert">Important</string>
    <string name="pref_confirmar_alert">Confirm</string>
    <string name="pref_yes_alert">Yes</string>
    <string name="pref_no_alert">No</string>
    <string name="pref_enviar">Send to</string>
    <string name="pref_error_112">ERROR: 112. The function is not available in your device.</string>
    <string name="pref_error_312">ERROR: 312. The Google Play services APK is not up-to-date please install the latest version.</string>
    <string name="pref_error_222">ERROR: 222. We are having problems to connect to the server, please try again later.</string>
    <string name="pref_error_TTS" translatable="false">ERROR: 568. TextToSpeech engine is not working.</string>
    <string name="pref_elija">Choose an option</string>
    <string name="pref_text1_alert">Do you want to save changes ?</string>
    <string name="pref_text2_alert">Do you want to restore the factory settings ?</string>
    <string name="pref_text3_alert">Do you want to create a new Pictogram ?</string>
    <string name="pref_text4_alert">Do you want to delete the selected Pictogram ?</string>
    <string name="pref_text5_alert">Do you want to delete the selected Group ?</string>
    <string name="pref_step1_tuto">Now, we are going to guide you to create a sentence with voice using OTTAA Project.</string>
    <string name="pref_final_tuto">Find share configurations options on the top bar.</string>
    <string name="pref_title2_tuto">Create a sentence</string>
    <string name="pref_step2_tuto">Select the pictogram you want by clicking on it.</string>
    <string name="pref_title3_tuto">Start talking</string>
    <string name="pref_step3_tuto">We are ready! Touch the OTTAA logo to start talking.</string>
    <string name="pref_title4_tuto">Restart</string>
    <string name="pref_step4_tuto">Touch the reset icon, or press the back key, to create a new sentence.</string>
    <string name="pref_title6_tuto">Not finding   what you need?</string>
    <string name="pref_step6_tuto">Touch the spinner to   find more related pictos.</string>
    <string name="pref_step5_tuto">Click to delete one picto, click and hold to delete everything</string>
    <string name="tuto_title1_galeriaPictos">Choose a picto</string>
    <string name="tuto_title2_galeriaPictos">Create your own picto</string>
    <string name="tuto_title3_galeriaPictos">Add more pictos to this gallery</string>
    <string name="tuto_step3_galeriaPictos">Pressing the  \"link\" button you can add more pictos to this gallery.</string>
    <string name="tuto_title1_galeriaGrupos">Choose one of the categories</string>
    <string name="tuto_title2_galeriaGrupos">Create your own category</string>
    <string name="tuto_title1_editPicto">Change the image</string>
    <string name="tuto_step1_editPicto">Pressing inside the circle you can change the pictos image.</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="bool_TTS" translatable="false">bool_tts</string>
    <string name="bool_subtitulo" translatable="false">bool_subtitulo</string>
    <string name="bool_subtitulo_mayuscula" translatable="false">bool_subtitulo_mayuscula</string>
    <string name="bool_calendario" translatable="false">bool_calendario</string>
    <string name="bool_barrido" translatable="false">bool_barrido</string>
    <string name="str_idioma" translatable="false">idioma</string>
    <string name="str_editar_picto" translatable="false">editar_picto</string>
    <string name="str_time_click" translatable="false">tiempo_retraso</string>
    <string name="str_delay_time_click">Time Between Clicks</string>
    <string name="location">Location</string>
    <string name="generar_infor">Generate Report</string>
    <string name="mBoolModoExperimental" translatable="false">mBoolModoExperimental</string>
    <string name="mBoolChatGPT" translatable="false">key_chat_gpt</string>
    <string name="pref_activado" translatable="false">ON</string>
    <string name="pref_desactivado" translatable="false">OFF</string>
    <string name="scanning_resources">Scanning speed</string>
    <string name="str_controlFacial">Facial Control</string>
    <string name="str_controlfacial">This function allows controlling the application using the face</string>
    <string name="borrar_talk">Talk and erase</string>
    <string name="borrartalk">This function delete the text after you  speak</string>
    <string name="str_avanzar_aceptar">Advance and accept</string>
    <string name="str_use_scroll"> Scroll Function</string>
    <string name="str_use_scroll_click">" Scroll Function With Click "</string>
    <string name="title_activity_about_ottaa">About OTTAA</string>
    <string name="str_seleccionar_edad_usuario">Select the user\'s age</string>
    <string name="joystick_orientation">Joystick Orientation</string>
    <string name="joystick_orientacion_tipo">Desktop Mode: Joystick oriented horizontally  Chair Mode: Joystick oriented vertically</string>
    <string name="user_sex_gender_description">select the user gender</string>
    <string name="gender_string">Gender</string>
    <string name="str_age_value_description">Age</string>
    <string name="str_pictograms">Pictograms</string>
    <string name="str_accesibility">Accessibility</string>
    <string name="str_prediction">Prediction</string>
    <string name="str_voice_and_subtitles">voice and subtitles</string>
    <string name="str_languaje">Language</string>
    <string name="str_Settings">Settings</string>
    <string name="talk_erase" translatable="false">hablar_borrar</string>
    <string name="say_pictogram_name_key" translatable="false">say_pictogram_name</string>
    <string name="repeat_pictogram_name_key" translatable="false">repeat_pictogram_key</string>
    <string name="usar_scroll" translatable="false">bool_scroll</string>
    <string name="usar_scroll_click" translatable="false">bool_scroll_click</string>
    <string name="scroll_speed" translatable="false">Scroll_speed</string>
    <string name="scroll_speed_title">Scroll Speed</string>
    <string name="speed">Speed</string>
    <string name="screen_scanning_operation">Select the operation of on-screen scanning</string>
    <string name="system_exit">Close Application</string>
    <string name="speed_summary">Customized the velocity about the Screen-Scanning or the click-Time</string>
    <string name="sip_and_puff" translatable="false">sip_and_puff</string>
    <string name="device_version">Device Version</string>
    <string name="select_device_version">select your devices version</string>
    <string name="suggested_pictograms">Suggested Pictograms</string>
    <string name="screen_scanning_mode">screen-scanning mode</string>
    <string name="say_pictogram_name_description"> OTTAA says the pictogram name at the touch it </string>
    <string name="repeat_pictogram_name_description">You can use a pictogram more than once when putting together a sentence.</string>
    <string name="say_pictogram_name_tittle">Say the pictogram</string>
    <string name="repeat_pictogram_name_tittle">Repeat Pictograms</string>
</resources>