<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <PreferenceCategory
        android:title="@string/str_Settings"
        android:shouldDisableView="false">
        <PreferenceScreen
            android:icon="@drawable/ic_photo_library_white_24dp"
            android:title="@string/str_pictograms">
            <PreferenceCategory android:title="@string/str_pictograms">

                <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                    android:defaultValue="true"
                    android:key="@string/str_editar_picto"
                    android:summary="@string/pref_summary_editar"
                    android:switchTextOff="@string/pref_desactivado"
                    android:switchTextOn="@string/pref_activado"
                    android:trackTint="@color/NaranjaOTTAA"
                    android:thumbTint="@color/Gray"

                    android:title="@string/pref_editar" />
                <Preference
                    android:key="@string/str_time_click"
                    android:title="@string/str_delay_time_click"
                    android:defaultValue="1" />

            </PreferenceCategory>
            <PreferenceCategory android:title="@string/borrar_talk">
                <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                    android:defaultValue="true"
                    android:key="@string/talk_erase"
                    android:summary="@string/borrartalk"
                    android:switchTextOff="@string/pref_desactivado"
                    android:switchTextOn="@string/pref_activado"
                    android:outlineSpotShadowColor="@color/NaranjaOTTAA"
                    android:title="@string/borrar_talk" />


            </PreferenceCategory>
            <PreferenceCategory android:title="@string/say_pictogram_name_tittle">
                <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                    android:defaultValue="false"
                    android:key="@string/say_pictogram_name_key"
                    android:summary="@string/say_pictogram_name_description"
                    android:switchTextOff="@string/pref_desactivado"
                    android:switchTextOn="@string/pref_activado"
                    android:outlineSpotShadowColor="@color/NaranjaOTTAA"
                    android:title="@string/say_pictogram_name_tittle" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/repeat_pictogram_name_tittle">
                <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                    android:defaultValue="true"
                    android:key="@string/repeat_pictogram_name_key"
                    android:summary="@string/repeat_pictogram_name_description"
                    android:switchTextOff="@string/pref_desactivado"
                    android:switchTextOn="@string/pref_activado"
                    android:outlineSpotShadowColor="@color/NaranjaOTTAA"
                    android:title="@string/repeat_pictogram_name_tittle" />
            </PreferenceCategory>

        </PreferenceScreen>

        <PreferenceScreen
            android:icon="@drawable/ic_assistant_white_24dp"
            android:title="@string/str_prediction">
            <PreferenceCategory
                android:title="@string/pref_agenda"
                android:enabled="false"
                android:key="category_4">

                <SwitchPreference
                    android:defaultValue="false"
                    android:key="@string/bool_calendario"
                    android:summary="@string/pref_summary_agenda"
                    android:switchTextOff="@string/pref_desactivado"
                    android:trackTint="@color/NaranjaOTTAA"
                    android:thumbTint="@color/Gray"
                    android:switchTextOn="@string/pref_activado"
                    android:title="@string/pref_text_agenda" />

            </PreferenceCategory>

            <PreferenceCategory
                android:title="@string/pref_ubicacion"
                android:enabled="true"
                android:key="category_5">

                <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                    android:defaultValue="false"
                    android:enabled="true"
                    android:key="bool_ubicacion"
                    android:summary="@string/pref_summary_ubicacion"
                    android:switchTextOff="@string/pref_desactivado"
                    android:switchTextOn="@string/pref_activado"
                    android:trackTint="@color/NaranjaOTTAA"
                    android:thumbTint="@color/Gray"
                    android:title="@string/pref_ubicacion" />


            </PreferenceCategory>
            <PreferenceCategory android:title="@string/suggested_pictograms"

                >
                <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                    android:defaultValue="false"
                    android:enabled="true"
                    android:key="bool_sugerencias"
                    android:summary="Sugiere pictogramas acorde al uso de el resto de los usuarios"
                    android:outlineSpotShadowColor="@color/NaranjaOTTAA"
                    android:switchTextOff="@string/pref_desactivado"
                    android:switchTextOn="@string/pref_activado"></com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences>

            </PreferenceCategory>
            <PreferenceCategory
                android:key="category_7"
                android:summary="@string/str_seleccionar_edad_usuario"
                android:title="@string/str_age_value_description">
                <Preference
                    android:key="edad"
                    android:title="@string/str_seleccionar_edad_usuario"
                    android:dependency="edad" />
            </PreferenceCategory>
            <PreferenceCategory
                android:key="category_9"
                android:summary="@string/user_sex_gender_description"
                android:title="@string/gender_string">
                <Preference
                    android:dependency="sexo"
                    android:key="sexo"
                    android:title="@string/user_sex_gender_description" />
            </PreferenceCategory>

        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/ic_accessibility_black_24dp"
            android:title="@string/str_accesibility">
            <PreferenceCategory
                android:title="@string/pref_barrido"
                android:key="category_6">
                <Preference
                    android:key="skillHand"
                    android:title="Mano Habil"
                    android:summary="Seleccione la mano habil "
                    android:defaultValue="false" />
                <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                    android:defaultValue="false"
                    android:key="bool_barrido"
                    android:summary="@string/pref_summary_barrido"
                    android:switchTextOff="@string/pref_desactivado"
                    android:switchTextOn="@string/pref_activado"
                    android:trackTint="@color/NaranjaOTTAA"
                    android:thumbTint="@color/Gray"
                    android:title="@string/pref_barrido" />
                <PreferenceScreen
                    android:title="@string/screen_scanning_mode"
                    android:summary="@string/screen_scanning_operation">
                    <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                        android:defaultValue="false"
                        android:dependency="bool_barrido"
                        android:key="tipo_barrido_normal"
                        android:summary="@string/pref_activado"
                        android:switchTextOff="@string/pref_desactivado"
                        android:switchTextOn="@string/pref_activado"
                        android:trackTint="@color/NaranjaOTTAA"
                        android:thumbTint="@color/Gray"
                        android:title="@string/pref_barrido" />
                    <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                        android:defaultValue="false"
                        android:dependency="bool_barrido"
                        android:key="tipo_barrido"
                        android:summary="@string/pref_activado"
                        android:switchTextOff="@string/pref_desactivado"
                        android:switchTextOn="@string/pref_activado"
                        android:trackTint="@color/NaranjaOTTAA"
                        android:thumbTint="@color/Gray"
                        android:title="@string/str_avanzar_aceptar" />
                    <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                        android:defaultValue="false"
                        android:dependency="@string/bool_barrido"
                        android:key="@string/usar_scroll"
                        android:summary="@string/pref_activado"
                        android:switchTextOff="@string/pref_desactivado"
                        android:switchTextOn="@string/pref_activado"
                        android:trackTint="@color/NaranjaOTTAA"
                        android:thumbTint="@color/Gray"
                        android:title="@string/str_use_scroll" />
                    <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                        android:defaultValue="false"
                        android:dependency="@string/bool_barrido"
                        android:key="@string/usar_scroll_click"
                        android:summary="@string/pref_activado"
                        android:switchTextOff="@string/pref_desactivado"
                        android:switchTextOn="@string/pref_activado"
                        android:trackTint="@color/NaranjaOTTAA"
                        android:thumbTint="@color/Gray"
                        android:title="@string/str_use_scroll_click" />
                    <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                        android:defaultValue="false"
                        android:dependency="@string/bool_barrido"
                        android:key="@string/sip_and_puff"
                        android:summary="@string/pref_activado"
                        android:switchTextOff="@string/pref_desactivado"
                        android:switchTextOn="@string/pref_activado"
                        android:trackTint="@color/NaranjaOTTAA"
                        android:thumbTint="@color/Gray"
                        android:title="Sip &amp; Puff Switch" />
                </PreferenceScreen>

                <PreferenceScreen
                    android:title="@string/device_version"
                    android:summary="@string/select_device_version">
                    <Preference
                        android:defaultValue="0"
                        android:dependency="@string/bool_barrido"
                        android:key="v1"
                        android:title="1.0" />
                    <Preference
                        android:defaultValue="1"
                        android:dependency="@string/bool_barrido"
                        android:key="v2"
                        android:title="2.0" />
                </PreferenceScreen>
                <PreferenceScreen
                    android:title="@string/speed"
                    android:summary="@string/speed_summary">
                    <Preference
                        android:defaultValue="0"
                        android:dependency="@string/usar_scroll"
                        android:key="@string/scroll_speed"
                        android:title="@string/scroll_speed_title" />
                    <Preference
                        android:dependency="@string/bool_barrido"
                        android:key="velocidad_barrido"
                        android:title="@string/scanning_resources"
                        android:defaultValue="1" />
                </PreferenceScreen>


                <Preference
                    android:defaultValue="0"
                    android:dependency="@string/bool_barrido"
                    android:key="posicion_joystick"
                    android:summary="@string/joystick_orientacion_tipo"
                    android:title="@string/joystick_orientation" />


            </PreferenceCategory>
            <PreferenceCategory
                android:title="@string/str_controlFacial"
                android:key="category_8">
                <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                    android:defaultValue="false"
                    android:key="control_facial"
                    android:summary="@string/str_controlfacial"
                    android:switchTextOff="@string/pref_desactivado"
                    android:switchTextOn="@string/pref_activado"
                    android:outlineSpotShadowColor="@color/NaranjaOTTAA"


                    android:title="@string/str_controlFacial" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/ic_record_voice_over_black_24dp"
            android:title="@string/str_voice_and_subtitles"

            >
            <PreferenceCategory
                android:title="@string/pref_header_tts"
                android:key="category_2">

                <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                    android:defaultValue="false"
                    android:key="@string/bool_TTS"
                    android:summary="@string/pref_example_presentacion"
                    android:switchTextOff="@string/pref_desactivado"
                    android:switchTextOn="@string/pref_activado"
                    android:trackTint="@color/NaranjaOTTAA"
                    android:thumbTint="@color/Gray"

                    android:title="@string/pref_text_tts" />

                <Preference
                    android:dependency="@string/bool_TTS"
                    android:key="velocidad_tts"
                    android:title="@string/pref_option1_tts"
                    android:defaultValue="1" />

                <Preference
                    android:dependency="@string/bool_TTS"
                    android:key="pitch_tts"
                    android:title="@string/pref_option2_tts"
                    android:defaultValue="2" />
            </PreferenceCategory>

            <PreferenceCategory
                android:title="@string/pref_header_subtitulo"
                android:key="category_3">

                <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                    android:defaultValue="false"
                    android:key="@string/bool_subtitulo"
                    android:summary="@string/pref_summary_subtitulo"
                    android:switchTextOff="@string/pref_desactivado"
                    android:switchTextOn="@string/pref_activado"
                    android:outlineSpotShadowColor="@color/NaranjaOTTAA"
                    android:thumbTint="@color/Gray"
                    android:trackTint="@color/NaranjaOTTAA"
                    android:title="@string/pref_text_subtitulo" />

                <Preference
                    android:dependency="@string/bool_subtitulo"
                    android:key="subtitulo_tamanio"
                    android:title="@string/pref_subtitulo_tamanio"
                    android:defaultValue="25"
                    android:trackTint="@color/NaranjaOTTAA"
                    android:thumbTint="@color/Gray" />

                <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                    android:defaultValue="false"
                    android:dependency="@string/bool_subtitulo"
                    android:key="@string/bool_subtitulo_mayuscula"
                    android:summary="@string/pref_subtitulo_mayuscula_summary"
                    android:switchTextOff="@string/pref_desactivado"
                    android:switchTextOn="@string/pref_activado"
                    android:trackTint="@color/NaranjaOTTAA"
                    android:thumbTint="@color/Gray"
                    android:outlineSpotShadowColor="@color/NaranjaOTTAA"

                    android:title="@string/pref_subtitulo_mayuscula" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/str_languaje">
            <PreferenceCategory
                android:key="category_8"
                android:title="@string/pref_idioma">
                <Preference
                    android:key="idioma"
                    android:dependency="@string/str_idioma"
                    android:title="@string/pref_idioma" />
                <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                    android:defaultValue="false"
                    android:key="@string/mBoolModoExperimental"
                    android:summary="@string/pref_summary_experimental"
                    android:switchTextOff="@string/pref_desactivado"
                    android:switchTextOn="@string/pref_activado"
                    android:trackTint="@color/NaranjaOTTAA"
                    android:thumbTint="@color/Gray"
                    android:title="@string/pref_experimental" />

            <com.stonefacesoft.ottaa.utils.preferences.PersonalSwitchPreferences
                        android:defaultValue="false"
                        android:key="@string/mBoolChatGPT"
                        android:dependency="@string/mBoolModoExperimental"
                        android:summary="@string/pref_summary_chatgpt"
                        android:switchTextOff="@string/pref_desactivado"
                        android:switchTextOn="@string/pref_activado"
                        android:trackTint="@color/NaranjaOTTAA"
                        android:thumbTint="@color/Gray"
                        android:title="ChatGPT" />
            </PreferenceCategory>
        </PreferenceScreen>


        <!--- <PreferenceCategory
             android:title="@string/pref_header_presentacion"
             android:key="category_1">

             <SwitchPreference
                 android:key="@string/bool_presentacion"
                 android:title="@string/pref_text_presentacion"
                 android:hint="HOLI"
                 android:defaultValue="false" />

             <EditTextPreference
                 android:dependency="@string/bool_presentacion"
                 android:key="@string/str_presentacion"
                 android:title="@string/pref_title_presentacion"
                 android:defaultValue="@string/pref_example_presentacion" />

         <PreferenceCategory
     </PreferenceCategory> -->
    </PreferenceCategory>
</PreferenceScreen>